Fix description on templates

--- a/templates/oneclick/deferred/authorize.html
+++ b/templates/oneclick/deferred/authorize.html
@@ -9,7 +9,7 @@
     <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="#">Ejemplo Oneclick Mall - Autorizar Transaccion</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Step: Authorize Transaccion</li>
+    <li class="breadcrumb-item active" aria-current="page">Step: Authorize Transaction</li>
     </ol>
     </nav>
 
