--- a/templates/oneclick/deferred/capture.html
+++ b/templates/oneclick/deferred/capture.html
@@ -1,14 +1,14 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Webpay Plus Mall Deferred- Captura</title>
+    <title>Ejemplo Oneclick Mall Diferido - Captura</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Ejemplos Webpay Plus Mall Diferido - Captura</a></li>
+            <li class="breadcrumb-item"><a href="#">Ejemplo Oneclick Mall Diferido - Captura</a></li>
             <li class="breadcrumb-item active" aria-current="page">Step: Capture</li>
         </ol>
     </nav>
