--- a/templates/oneclick/deferred/increase_date.html
+++ b/templates/oneclick/deferred/increase_date.html
@@ -2,14 +2,14 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Webpay Plus Mall Deferred- Incrementar fecha expiraci&oacute;n Transacci&oacute;n</title>
+    <title>Ejemplo Oneclick Mall Diferido - Incrementar fecha expiraci&oacute;n Transacci&oacute;n</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Ejemplos Webpay Plus Mall Diferido - Incrementar fecha expiraci&oacute;n Transacci&oacute;n</a></li>
+            <li class="breadcrumb-item"><a href="#">Ejemplo Oneclick Mall Diferido - Incrementar fecha expiraci&oacute;n Transacci&oacute;n</a></li>
             <li class="breadcrumb-item active" aria-current="page">Step: Increase Expiration Date</li>
         </ol>
     </nav>
