--- a/templates/oneclick/deferred/reverse_preauthorized_amount.html
+++ b/templates/oneclick/deferred/reverse_preauthorized_amount.html
@@ -2,14 +2,14 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Webpay Plus Mall Deferred- Reversa monto pre autorizado Transacci&oacute;n</title>
+    <title>Ejemplo Oneclick Mall Diferido - Reversa monto pre autorizado Transacci&oacute;n</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Ejemplos Webpay Plus Mall Diferido - Reversa monto pre autorizado
+            <li class="breadcrumb-item"><a href="#">Ejemplo Oneclick Mall Diferido - Reversa monto pre autorizado
                     Transacci&oacute;nn</a></li>
             <li class="breadcrumb-item active" aria-current="page">Step: Reverse Pre Authorized Amount</li>
         </ol>
