--- a/templates/transaccion_completa/deferred/increase_amount.html
+++ b/templates/transaccion_completa/deferred/increase_amount.html
@@ -1,14 +1,14 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Transaccion completa Deferred- Incrementar monto pre autorizado</title>
+    <title>Ejemplo Transaccion completa Diferido - Incrementar monto pre autorizado</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Ejemplo Transaccion completa Deferred - Incrementar monto pre autorizado</a></li>
+        <li class="breadcrumb-item"><a href="#">Ejemplo Transaccion completa Diferido - Incrementar monto pre autorizado</a></li>
         <li class="breadcrumb-item active" aria-current="page">Step: Increase pre authorized amount </li>
     </ol>
 </nav>
