--- a/templates/transaccion_completa_mall/deferred/create.html
+++ b/templates/transaccion_completa_mall/deferred/create.html
@@ -1,6 +1,6 @@
 
 <body>
-<h1>Ejemplo Transaccion completa mall diferida</h1>
+<h1>Ejemplo Transaccion completa mall Diferido</h1>
 
 <form class="transaccion_completa_form" action="/mallfulltransaction-deferred/create" method="post" style="display: flex; flex-direction:column; width:50%;font-size: 20px;">
   <label for="buy_order">
