--- a/templates/transaccion_completa_mall/deferred/created.html
+++ b/templates/transaccion_completa_mall/deferred/created.html
@@ -1,5 +1,5 @@
 <body>
-    <h1>Ejemplo Transaccion completa mall: Transacción creada exitosamente</h1>
+    <h1>Ejemplo Transaccion completa mall Diferido: Transacción creada exitosamente</h1>
     
     <h2>Request</h2>
     {{ req  }}
