--- a/templates/transaccion_completa_mall/deferred/history.html
+++ b/templates/transaccion_completa_mall/deferred/history.html
@@ -1,4 +1,4 @@
-<h1>Ejemplo Transaccion Completa Diferida Mall Historial de transacciones</h1>
+<h1>Ejemplo Transaccion Completa Diferida Mall - Historial de transacciones</h1>
 
 <h3>Request</h3>
 {{ request }}
