--- a/templates/transaccion_completa_mall/deferred/installments.html
+++ b/templates/transaccion_completa_mall/deferred/installments.html
@@ -1,4 +1,4 @@
-<h1>Ejemplo transaccion completa Mall diferida cuotas consultadas</h1>
+<h1>Ejemplo transaccion completa Mall diferida - cuotas consultadas</h1>
 
 <h2>Request</h2>
 {{ req }}
