--- a/templates/webpay/plus_deferred/refund.html
+++ b/templates/webpay/plus_deferred/refund.html
@@ -1,14 +1,14 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Webpay Plus Deferred- ReembolsarTransacci&oacute;n</title>
+    <title>Ejemplo Webpay Plus Diferido- ReembolsarTransacci&oacute;n</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Ejemplos Webpay Plus Deferred - Reembolsar Transacci&oacute;nn</a></li>
+        <li class="breadcrumb-item"><a href="#">Ejemplos Webpay Plus Diferido - Reembolsar Transacci&oacute;nn</a></li>
         <li class="breadcrumb-item active" aria-current="page">Step: Refund</li>
     </ol>
 </nav>
