--- a/templates/webpay/plus_deferred/status-form.html
+++ b/templates/webpay/plus_deferred/status-form.html
@@ -2,14 +2,14 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplos Webpay - Estado de Transacci&oacute;n</title>
+    <title>Ejemplos Webpay Plus Diferido - Estado de Transacci&oacute;n</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Ejemplo Webpay - Status</a></li>
+            <li class="breadcrumb-item"><a href="#">Ejemplo Webpay Plus Diferido- Status</a></li>
         </ol>
     </nav>
 
