--- a/templates/webpay/plus_mall_deferred/capture.html
+++ b/templates/webpay/plus_mall_deferred/capture.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Webpay Plus Mall Deferred- Capturar Transacci&oacute;n</title>
+    <title>Ejemplo Webpay Plus Mall Diferido- Capturar Transacci&oacute;n</title>
     {% include 'include/header.html' %}
 </head>
 
@@ -11,7 +11,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">Ejemplos Webpay Plus Mall Diferido - Capturar
                     Transacci&oacute;nn</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Step: Capturar</li>
+            <li class="breadcrumb-item active" aria-current="page">Step: Capture</li>
         </ol>
     </nav>
 
