--- a/templates/webpay/plus_mall_deferred/history.html
+++ b/templates/webpay/plus_mall_deferred/history.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Webpay Plus Mall Deferred- Historial de Transacci&oacute;nes</title>
+    <title>Ejemplo Webpay Plus Mall Diferido - Historial de Transacci&oacute;nes</title>
     {% include 'include/header.html' %}
 </head>
 
