--- a/templates/oneclick/deferred/status_form.html
+++ b/templates/oneclick/deferred/status_form.html
@@ -1,14 +1,14 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Oneclick Mall - Iniciar Inscripcion</title>
+    <title>Ejemplo Oneclick Mall Diferido - Iniciar Inscripcion</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
     <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="#">Ejemplo Oneclick Mall - Iniciar Inscripcion</a></li>
+    <li class="breadcrumb-item"><a href="#">Ejemplo Oneclick Mall Diferido - Iniciar Inscripcion</a></li>
     <li class="breadcrumb-item active" aria-current="page">Step: Iniciar Inscription</li>
     </ol>
     </nav>
