--- a/templates/transaccion_completa/deferred/capture.html
+++ b/templates/transaccion_completa/deferred/capture.html
@@ -1,14 +1,14 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Transaccion completa Deferred- Captura</title>
+    <title>Ejemplo Transaccion completa Diferido- Captura</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Ejemplo Transaccion completa Deferred - Captura</a></li>
+        <li class="breadcrumb-item"><a href="#">Ejemplo Transaccion completa Diferido - Captura</a></li>
         <li class="breadcrumb-item active" aria-current="page">Step: Capture </li>
     </ol>
 </nav>
