--- a/templates/transaccion_completa/deferred/create.html
+++ b/templates/transaccion_completa/deferred/create.html
@@ -1,6 +1,6 @@
 
 <body>
-<h1>Ejemplo Transaccion completa diferida</h1>
+<h1>Ejemplo Transaccion completa Diferido</h1>
 
 <form class="transaccion_completa_form" action="/fulltransaction-deferred/create" method="post" style="display: flex; flex-direction:column; width:50%;font-size: 20px;">
   <label for="buy_order">
