--- a/templates/transaccion_completa_mall/deferred/capture.html
+++ b/templates/transaccion_completa_mall/deferred/capture.html
@@ -1,4 +1,4 @@
-<h1>Ejemplo Transaccion Completa Diferida Mall captura</h1>
+<h1>Ejemplo Transaccion Completa Diferida Mall - Captura</h1>
 
 <h2>Request</h2>
 {{ request }}
