--- a/templates/transaccion_completa_mall/deferred/increase_amount.html
+++ b/templates/transaccion_completa_mall/deferred/increase_amount.html
@@ -1,4 +1,4 @@
-<h1>Ejemplo Transaccion Completa Diferida Mall Incrementar monto pre autorizado</h1>
+<h1>Ejemplo Transaccion Completa Diferida Mall - Incrementar monto pre autorizado</h1>
 
 <h2>Request</h2>
 {{ request }}
