--- a/templates/transaccion_completa_mall/deferred/increase_date.html
+++ b/templates/transaccion_completa_mall/deferred/increase_date.html
@@ -1,4 +1,4 @@
-<h1>Ejemplo Transaccion Completa Diferida Mall extender fecha de expiración</h1>
+<h1>Ejemplo Transaccion Completa Diferida Mall - extender fecha de expiración</h1>
 
 <h2>Request</h2>
 {{ request }}
