--- a/templates/transaccion_completa_mall/deferred/transaction_committed.html
+++ b/templates/transaccion_completa_mall/deferred/transaction_committed.html
@@ -1,4 +1,4 @@
-<h1>Ejemplo Transaccion Completa Diferida Mall Transacciòn confirmada</h1>
+<h1>Ejemplo Transaccion Completa Diferida Mall - Transacciòn confirmada</h1>
 
 <h2>Request</h2>
 {{ req }}
