--- a/templates/webpay/plus_deferred/commit.html
+++ b/templates/webpay/plus_deferred/commit.html
@@ -1,14 +1,14 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Webpay Plus Deferred- Confirmar Transacci&oacute;n</title>
+    <title>Ejemplo Webpay Plus Diferido - Confirmar Transacci&oacute;n</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Ejemplo Webpay Plus Deferred - Confirmar Transacci&oacute;n</a></li>
+        <li class="breadcrumb-item"><a href="#">Ejemplo Webpay Plus Diferido - Confirmar Transacci&oacute;n</a></li>
         <li class="breadcrumb-item active" aria-current="page">Step: Commit Transaction</li>
     </ol>
 </nav>
