--- a/templates/webpay/plus_deferred/create.html
+++ b/templates/webpay/plus_deferred/create.html
@@ -2,14 +2,14 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplos Webpay Plus Deferred - Crear Transaccion</title>
+    <title>Ejemplos Webpay Plus Diferido - Crear Transaccion</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Ejemplo Webpay Plus Deferred - Crear Transaccion</a></li>
+            <li class="breadcrumb-item"><a href="#">Ejemplo Webpay Plus Diferido - Crear Transaccion</a></li>
             <li class="breadcrumb-item active" aria-current="page">Step: <strong>Create Transaction</strong></li>
         </ol>
     </nav>
