--- a/templates/webpay/plus_deferred/increase_amount.html
+++ b/templates/webpay/plus_deferred/increase_amount.html
@@ -1,14 +1,14 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Webpay Plus Deferred- {{ action }}</title>
+    <title>Ejemplo Webpay Plus Diferido - {{ action }}</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Ejemplo Webpay Plus Deferred- {{ action }}</a></li>
+        <li class="breadcrumb-item"><a href="#">Ejemplo Webpay Plus Diferido - {{ action }}</a></li>
         <li class="breadcrumb-item active" aria-current="page">Step: {{ step }}</li>
     </ol>
 </nav>
