--- a/templates/webpay/plus_deferred/refund-form.html
+++ b/templates/webpay/plus_deferred/refund-form.html
@@ -1,14 +1,14 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Webpay - Transaccion Anulaci&oacute;n</title>
+    <title>Ejemplo Webpay Plus Diferido - Transaccion Anulaci&oacute;n</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
     <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="#">Ejemplo Webpay - Transaccion Anulaci&oacute;n</a></li>
+    <li class="breadcrumb-item"><a href="#">Ejemplo Webpay Plus Diferido - Transaccion Anulaci&oacute;n</a></li>
     </ol>
     </nav>
 
