--- a/templates/webpay/plus_deferred/status.html
+++ b/templates/webpay/plus_deferred/status.html
@@ -1,14 +1,14 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplos Webpay - Estado de Transacci&oacute;n</title>
+    <title>Ejemplos Webpay Plus Diferido - Estado de Transacci&oacute;n</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Ejemplos Patpass Webpay</a></li>
+        <li class="breadcrumb-item"><a href="#">Ejemplos Webpay Plus Diferido</a></li>
     </ol>
 </nav>
 <div class="alert alert-warning" role="alert">
