--- a/templates/webpay/plus_mall_deferred/created.html
+++ b/templates/webpay/plus_mall_deferred/created.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Ejemplo Webpay Plus - Confirmar Transacci&oacute;n</title>
+  <title>Ejemplo Webpay Plus Diferido - Confirmar Transacci&oacute;n</title>
   {% include 'include/header.html' %}
 </head>
 
