--- a/templates/webpay/plus_mall_deferred/increase_date.html
+++ b/templates/webpay/plus_mall_deferred/increase_date.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Webpay Plus Mall Deferred- Incrementar fecha expiraci&oacute;n Transacci&oacute;n</title>
+    <title>Ejemplo Webpay Plus Mall Diferido - Incrementar fecha expiraci&oacute;n Transacci&oacute;n</title>
     {% include 'include/header.html' %}
 </head>
 
