--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
         <td>Webpay Plus</td>
         <td><a href="/webpay-plus/create">Crear Transacci&oacute;n</a></td>
         <td><a href="/webpay-plus/refund-form">Reembolsar Transacci&oacute;n</a></td>
-        <td><a href="/webpayplus-status-form">Consultar Estado Transacci&oacute;n</a></td>
+        <td><a href="/webpay-plus/status-form">Consultar Estado Transacci&oacute;n</a></td>
     </tr>
     <tr>
         <td>Webpay Plus Mall</td>
