--- a/templates/webpay/plus_mall/status.html
+++ b/templates/webpay/plus_mall/status.html
@@ -8,7 +8,7 @@
 <body class="container">
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Ejemplos Patpass Webpay - Estado de Estado</a></li>
+        <li class="breadcrumb-item"><a href="#">Ejemplos Patpass Webpay - Estado de Transaccio&acute;n</a></li>
     </ol>
 </nav>
 <div class="alert alert-warning" role="alert">
