fix: change wrong mall mall caption

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
     </tr>
 
     <tr>
-    <td>Webpay Plus Mall Mall Deferred</td>
+    <td>Webpay Plus Mall Deferred</td>
     <td><a href="/webpay-plus-mall-deferred/create">Crear Transacci&oacute;n</a></td>
     <td><a href="/webpay-plus-mall-deferred/refund-form">Reembolsar Transacci&oacute;n</a></td>
     <td><a href="/webpay-plus-mall-deferred/status-form">Consultar Estado Transacci&oacute;n</a></td>
