--- a/templates/transaccion_completa/transaction_refunded.html
+++ b/templates/transaccion_completa/transaction_refunded.html
@@ -1,7 +1,35 @@
-<h1>Ejemplo transacción completa Reembolso de la transacción</h1>
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>
+      Ejemplo Transacci&oacute;n Completa - Reembolsar Transacci&oacute;n
+    </title>
+    {% include 'include/header.html' %}
+  </head>
 
-<h2>Request</h2>
-{{ req }}
+  <body class="container">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="#"
+            >Ejemplos Transaccion Completa - Reembolsar Transacci&oacute;nn</a
+          >
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">Step: Refund</li>
+      </ol>
+    </nav>
 
-<h2>Response</h2>
-{{ resp }}
+    <div class="alert alert-warning" role="alert">
+      <h3>request</h3>
+      token_ws: {{ token }}, amount: {{ amount }}
+    </div>
+    <div class="alert alert-primary" role="alert">
+      <h3>result</h3>
+      {{ resp }}
+    </div>
+    <br />
+    <p><samp>Reembolso realizado con exito.</samp></p>
+    <br />
+    <a href="/">&laquo; volver a index</a>
+  </body>
+</html>
