--- a/templates/oneclick/deleted.html
+++ b/templates/oneclick/deleted.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Ejemplo Oneclick Mall - Borrar Inscripcion</title>
+    <title>Ejemplo Oneclick Mall - Borrar Inscripci&oacute;n</title>
     {% include 'include/header.html' %}
   </head>
 
@@ -9,7 +9,7 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="#">Ejemplo Oneclick Mall - Borrar Inscripcion</a>
+          <a href="#">Ejemplo Oneclick Mall - Borrar Inscripci&oacute;n</a>
         </li>
         <li class="breadcrumb-item active" aria-current="page">
           Step: Deleted Inscription
@@ -28,9 +28,9 @@
     {% endif %}
       <h3>result</h3>
       {% if resp == True %}
-      <span>Inscripcion Eliminada </span>
+      <span>Inscripci&oacute;n Eliminada </span>
       {% else %}
-      <span>Inscripcion No Eliminada</span>
+      <span>Inscripci&oacute;n No Eliminada</span>
       {% endif %}
     </div>
     <a href="/">&laquo; volver a index</a>
