--- a/templates/transaccion_completa/deferred/capture.html
+++ b/templates/transaccion_completa/deferred/capture.html
@@ -1,27 +1,31 @@
 <html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Transaccion completa Diferido- Captura</title>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Ejemplo Transacci&oacute;n Completa Diferido- Captura</title>
     {% include 'include/header.html' %}
-</head>
+  </head>
 
-<body class="container">
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Ejemplo Transaccion completa Diferido - Captura</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Step: Capture </li>
-    </ol>
-</nav>
+  <body class="container">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="#">Ejemplo Transacci&oacute;n Completa Diferido - Captura</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">
+          Step: Capture
+        </li>
+      </ol>
+    </nav>
 
-<div class="alert alert-warning" role="alert">
-    <h3>Request</h3>
-    {{ request }}
-</div>
-<div class="alert alert-primary" role="alert">
-    <h3>result</h3>
-    {{ response }}
-</div>
+    <div class="alert alert-warning" role="alert">
+      <h3>Request</h3>
+      {{ request }}
+    </div>
+    <div class="alert alert-primary" role="alert">
+      <h3>result</h3>
+      {{ response }}
+    </div>
 
-<a href="/">&laquo; volver a index</a>
-</body>
+    <a href="/">&laquo; volver a index</a>
+  </body>
 </html>
