--- a/templates/transaccion_completa/transaction_status.html
+++ b/templates/transaccion_completa/transaction_status.html
@@ -9,7 +9,9 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="#">Ejemplos Transaccion Completa - Status de Transaccionn</a>
+          <a href="#"
+            >Ejemplos Transacci&oacute;n Completa - Status de Transaccionn</a
+          >
         </li>
         <li class="breadcrumb-item active" aria-current="page">Step: Refund</li>
       </ol>
