--- a/templates/transaccion_completa_mall/deferred/status.html
+++ b/templates/transaccion_completa_mall/deferred/status.html
@@ -1,4 +1,4 @@
-<h1>Ejemplo Transaccion Completa Diferida Mall - Status</h1>
+<h1>Ejemplo Transacci&oacute;n Completa Diferida Mall - Status</h1>
 
 
 <h2>Request</h2>
