--- a/templates/oneclick/deferred/deleted.html
+++ b/templates/oneclick/deferred/deleted.html
@@ -1,26 +1,32 @@
 <html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Oneclick Mall Diferido - Borrar Inscripcion</title>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Ejemplo Oneclick Mall Diferido - Borrar Inscripci&oacute;n</title>
     {% include 'include/header.html' %}
-</head>
+  </head>
 
-<body class="container">
+  <body class="container">
     <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="#">Ejemplo Oneclick Mall Diferido - Borrar Inscripcion</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Step: Deleted Inscription</li>
-    </ol>
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="#"
+            >Ejemplo Oneclick Mall Diferido - Borrar Inscripci&oacute;n</a
+          >
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">
+          Step: Deleted Inscription
+        </li>
+      </ol>
     </nav>
 
-<div class="alert alert-warning" role="alert">
-<h3>request</h3>
- {{ req }}
-</div>
-<div class="alert alert-primary" role="alert">
-<h3>result</h3>
-Inscripcion Eliminada
-</div>
-<a href="/">&laquo; volver a index</a>
-</body>
+    <div class="alert alert-warning" role="alert">
+      <h3>request</h3>
+      {{ req }}
+    </div>
+    <div class="alert alert-primary" role="alert">
+      <h3>result</h3>
+      Inscripci&oacute;n Eliminada
+    </div>
+    <a href="/">&laquo; volver a index</a>
+  </body>
 </html>
