--- a/templates/oneclick/deferred/started.html
+++ b/templates/oneclick/deferred/started.html
@@ -1,33 +1,44 @@
 <html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Oneclick Mall Diferido - Inscripcion iniciada</title>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Ejemplo Oneclick Mall Diferido - Inscripci&oacute;n iniciada</title>
     {% include 'include/header.html' %}
-</head>
+  </head>
 
-<body class="container">
+  <body class="container">
     <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="#">Ejemplo Oneclick Mall Diferido - Inscripcion iniciada</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Step: Inscription started</li>
-    </ol>
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="#"
+            >Ejemplo Oneclick Mall Diferido - Inscripci&oacute;n iniciada</a
+          >
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">
+          Step: Inscription started
+        </li>
+      </ol>
     </nav>
 
-<div class="alert alert-warning" role="alert">
-<h3>request</h3>
-{{ req }}
-</div>
-<div class="alert alert-primary" role="alert">
-<h3>result</h3>
-{{ resp }}
-</div>
-<br>
+    <div class="alert alert-warning" role="alert">
+      <h3>request</h3>
+      {{ req }}
+    </div>
+    <div class="alert alert-primary" role="alert">
+      <h3>result</h3>
+      {{ resp }}
+    </div>
+    <br />
 
-<form class="transaccion_completa_form" action="{{ resp.url_webpay }}" method="post" style="display: flex; flex-direction:column; width:50%;font-size: 20px;">
-  <input type="hidden" name="TBK_TOKEN" value="{{ resp.token }}">
+    <form
+      class="transaccion_completa_form"
+      action="{{ resp.url_webpay }}"
+      method="post"
+      style="display: flex; flex-direction: column; width: 50%; font-size: 20px"
+    >
+      <input type="hidden" name="TBK_TOKEN" value="{{ resp.token }}" />
 
-  <button class="btn btn-primary" type="submit">Pagar</button>
-</form>
-<a href="/">&laquo; volver a index</a>
-</body>
+      <button class="btn btn-primary" type="submit">Pagar</button>
+    </form>
+    <a href="/">&laquo; volver a index</a>
+  </body>
 </html>
