--- a/templates/oneclick/status.html
+++ b/templates/oneclick/status.html
@@ -1,28 +1,32 @@
 <html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Oneclick Mall - Estado Inscripcion</title>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Ejemplo Oneclick Mall - Estado Inscripci&oacute;n</title>
     {% include 'include/header.html' %}
-</head>
+  </head>
 
-<body class="container">
+  <body class="container">
     <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="#">Ejemplo Oneclick Mall - Estado Inscripcion</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Step: Inscription Status</li>
-    </ol>
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="#">Ejemplo Oneclick Mall - Estado Inscripci&oacute;n</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">
+          Step: Inscription Status
+        </li>
+      </ol>
     </nav>
 
-<div class="alert alert-warning" role="alert">
-<h3>request</h3>
-{{ req }}
-</div>
-<div class="alert alert-primary" role="alert">
-<h3>result</h3>
-{{ resp }}
-</div>
-<br>
+    <div class="alert alert-warning" role="alert">
+      <h3>request</h3>
+      {{ req }}
+    </div>
+    <div class="alert alert-primary" role="alert">
+      <h3>result</h3>
+      {{ resp }}
+    </div>
+    <br />
 
-<a href="/">&laquo; volver a index</a>
-</body>
+    <a href="/">&laquo; volver a index</a>
+  </body>
 </html>
