--- a/templates/patpass_comercio/status.html
+++ b/templates/patpass_comercio/status.html
@@ -1,32 +1,38 @@
 <html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplos Patpass Comercio - Finalizar Inscripcion</title>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Ejemplos Patpass Comercio - Finalizar Inscripci&oacute;n</title>
     {% include 'include/header.html' %}
-</head>
+  </head>
 
-<body class="container">
+  <body class="container">
     <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="#">Ejemplos Patpass Comercio - Finalizar Inscripcion</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Step: Finish Inscription</li>
-    </ol>
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="#"
+            >Ejemplos Patpass Comercio - Finalizar Inscripci&oacute;n</a
+          >
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">
+          Step: Finish Inscription
+        </li>
+      </ol>
     </nav>
 
-<div class="alert alert-warning" role="alert">
-<h3>request</h3>
-token_ws: {{ token }}
-</div>
-<div class="alert alert-primary" role="alert">
-<h3>result</h3>
-{{ response }}
-</div>
+    <div class="alert alert-warning" role="alert">
+      <h3>request</h3>
+      token_ws: {{ token }}
+    </div>
+    <div class="alert alert-primary" role="alert">
+      <h3>result</h3>
+      {{ response }}
+    </div>
 
-<br>
-<form action="{{ response.voucherUrl }}" method="POST">
-<input type="hidden" name="tokenComercio" value="{{ token }}">
-<input type="submit" class="btn btn-success" value="Get Voucher">
-</form>
-<a href="/">&laquo; volver a index</a>
-</body>
+    <br />
+    <form action="{{ response.voucherUrl }}" method="POST">
+      <input type="hidden" name="tokenComercio" value="{{ token }}" />
+      <input type="submit" class="btn btn-success" value="Get Voucher" />
+    </form>
+    <a href="/">&laquo; volver a index</a>
+  </body>
 </html>
