--- a/templates/transaccion_completa/deferred/created.html
+++ b/templates/transaccion_completa/deferred/created.html
@@ -1,35 +1,48 @@
 <html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Transaccion completa Diferido - Crear trx</title>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Ejemplo Transacci&oacute;n Completa Diferido - Crear trx</title>
     {% include 'include/header.html' %}
-</head>
+  </head>
 
-<body class="container">
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Ejemplo Transaccion completa Diferido - Crear trx</a></li>
+  <body class="container">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="#"
+            >Ejemplo Transacci&oacute;n Completa Diferido - Crear trx</a
+          >
+        </li>
         <li class="breadcrumb-item active" aria-current="page">Step: Create</li>
-    </ol>
-</nav>
+      </ol>
+    </nav>
 
-<div class="alert alert-warning" role="alert">
-    <h3>Request</h3>
-    {{ request }}
-</div>
-<div class="alert alert-primary" role="alert">
-    <h3>result</h3>
-    {{ response }}
-</div>
+    <div class="alert alert-warning" role="alert">
+      <h3>Request</h3>
+      {{ request }}
+    </div>
+    <div class="alert alert-primary" role="alert">
+      <h3>result</h3>
+      {{ response }}
+    </div>
 
-<form action="/fulltransaction-deferred/installments" method="POST">
-    <label for="installments">Cuotas:</label>
-    <input type="number" id="installments" name="installments" required minlength="1" maxlength="2" size="5" value="2">
-    <input type="hidden" name="token" value="{{ response.token }}">
-    <br><br>
-    <input type="submit" class="btn btn-success" value="Consulta de cuotas">
-</form>
+    <form action="/fulltransaction-deferred/installments" method="POST">
+      <label for="installments">Cuotas:</label>
+      <input
+        type="number"
+        id="installments"
+        name="installments"
+        required
+        minlength="1"
+        maxlength="2"
+        size="5"
+        value="2"
+      />
+      <input type="hidden" name="token" value="{{ response.token }}" />
+      <br /><br />
+      <input type="submit" class="btn btn-success" value="Consulta de cuotas" />
+    </form>
 
-<a href="/">&laquo; volver a index</a>
-</body>
+    <a href="/">&laquo; volver a index</a>
+  </body>
 </html>
