--- a/templates/transaccion_completa/status-form.html
+++ b/templates/transaccion_completa/status-form.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Ejemplos Webpay Plus - Solicitar Estado</title>
+    <title>Ejemplos Transacci&oacute;n Completa - Solicitar Estado</title>
     {% include 'include/header.html' %}
   </head>
 
@@ -9,7 +9,9 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="#">Ejemplos Webpay Plus - Solicitar Estado</a>
+          <a href="#"
+            >Ejemplos Transacci&oacute;n Completa - Solicitar Estado</a
+          >
         </li>
       </ol>
     </nav>
