--- a/templates/transaccion_completa/transaction_refunded.html
+++ b/templates/transaccion_completa/transaction_refunded.html
@@ -12,7 +12,8 @@
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
           <a href="#"
-            >Ejemplos Transaccion Completa - Reembolsar Transacci&oacute;nn</a
+            >Ejemplos Transacci&oacute;n Completa - Reembolsar
+            Transacci&oacute;nn</a
           >
         </li>
         <li class="breadcrumb-item active" aria-current="page">Step: Refund</li>
