--- a/templates/transaccion_completa_mall/refund-form.html
+++ b/templates/transaccion_completa_mall/refund-form.html
@@ -1,38 +1,56 @@
 <html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Transaccion Completa - Transacci&oacute;n Anulaci&oacute;n</title>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>
+      Ejemplo Transacci&oacute;n Completa - Transacci&oacute;n Anulaci&oacute;n
+    </title>
     {% include 'include/header.html' %}
-</head>
+  </head>
 
-<body class="container">
+  <body class="container">
     <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="#">Ejemplo Transaccion Completa - Transaccion Anulaci&oacute;n</a></li>
-    </ol>
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="#"
+            >Ejemplo Transacci&oacute;n Completa - Transaccion
+            Anulaci&oacute;n</a
+          >
+        </li>
+      </ol>
     </nav>
 
     <div class="card">
-    <div class="card-body col-sm-4">
-        <form id="formulario" action="/mallfulltransaction/refund" method="POST">
-                <legend>Formulario de Anulaci&oacute;n</legend>
-                <div class="form-group">
-                    <label>Token:</label><input name="token_ws" class="form-control"/>
-                </div>
-                <div class="form-group">
-                    <label>Commerce Code:</label><input name="commerce_code" class="form-control"/>
-                </div>
-                <div class="form-group">
-                    <label>Buy Order:</label><input name="buy_order" class="form-control"/>
-                </div>
-                <div class="form-group">
-                    <label>Amount:</label><input name="amount" class="form-control"/>
-                </div>
-                <input name="enviar" type="submit" value="Enviar" class="btn btn-primary"/>
+      <div class="card-body col-sm-4">
+        <form
+          id="formulario"
+          action="/mallfulltransaction/refund"
+          method="POST"
+        >
+          <legend>Formulario de Anulaci&oacute;n</legend>
+          <div class="form-group">
+            <label>Token:</label><input name="token_ws" class="form-control" />
+          </div>
+          <div class="form-group">
+            <label>Commerce Code:</label
+            ><input name="commerce_code" class="form-control" />
+          </div>
+          <div class="form-group">
+            <label>Buy Order:</label
+            ><input name="buy_order" class="form-control" />
+          </div>
+          <div class="form-group">
+            <label>Amount:</label><input name="amount" class="form-control" />
+          </div>
+          <input
+            name="enviar"
+            type="submit"
+            value="Enviar"
+            class="btn btn-primary"
+          />
         </form>
+      </div>
     </div>
-    </div>
-<br>
-<a href="/">&laquo; Volver a index</a>
-</body>
+    <br />
+    <a href="/">&laquo; Volver a index</a>
+  </body>
 </html>
