--- a/templates/oneclick/start.html
+++ b/templates/oneclick/start.html
@@ -25,7 +25,7 @@
  </div>
  <div class="form-group">
     <label for="response_url">Response Url</label>
-    <input class="form-control" id="response_url" name="response_url" value="http://localhost:5000/oneclick-mall/finish"/>
+    <input class="form-control" id="response_url" name="response_url" value="{{ endpoint }}"/>
   </div>
   <button class="btn btn-primary" type="submit">Iniciar Inscripci&oacute;n</button>
 </form>
