style: adjust typos on webpay plus and patpass

--- a/templates/transaccion_completa/transaction_refunded.html
+++ b/templates/transaccion_completa/transaction_refunded.html
@@ -29,7 +29,7 @@
       {{ resp }}
     </div>
     <br />
-    <p><samp>Reembolso realizado con exito.</samp></p>
+    <p><samp>Reembolso realizado con &eacute;xito.</samp></p>
     <br />
     <a href="/">&laquo; volver a index</a>
   </body>
