--- a/templates/patpass_comercio/start_inscription.html
+++ b/templates/patpass_comercio/start_inscription.html
@@ -29,7 +29,7 @@
     </div>
     <br />
     <div class="alert alert-success" role="alert">
-      <p>Sesion iniciada con exito en Patpass Comercio</p>
+      <p>Sesion iniciada con &eacute;xito en Patpass Comercio</p>
     </div>
     <br />
     <form action="{{ response.url }}" method="POST">
@@ -41,3 +41,4 @@
     <a href="/">&laquo; volver a index</a>
   </body>
 </html>
+
