--- a/templates/webpay/patpass/create.html
+++ b/templates/webpay/patpass/create.html
@@ -26,7 +26,7 @@
 </div>
 <br>
     <div class="alert alert-success" role="alert">
-        <p>Sesion iniciada con exito en Webpay patpass</p>
+        <p>Sesion iniciada con &eacute; en Webpay patpass</p>
     </div>
 <br>
 <form action="{{ response.url }}" method="POST">
