style: fix more typos on templates

--- a/templates/patpass_comercio/start_inscription.html
+++ b/templates/patpass_comercio/start_inscription.html
@@ -1,7 +1,9 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Ejemplos Patpass Comercio - Transaccion Inscripci&oacute;n</title>
+    <title>
+      Ejemplos Patpass Comercio - Transacci&oacute;n Inscripci&oacute;n
+    </title>
     {% include 'include/header.html' %}
   </head>
 
@@ -10,7 +12,8 @@
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
           <a href="#"
-            >Ejemplos Patpass Comercio - Transaccion Inscripci&oacute;n</a
+            >Ejemplos Patpass Comercio - Transacci&oacute;n
+            Inscripci&oacute;n</a
           >
         </li>
         <li class="breadcrumb-item active" aria-current="page">
@@ -41,4 +44,3 @@
     <a href="/">&laquo; volver a index</a>
   </body>
 </html>
-
