--- a/templates/transaccion_completa/refund-form.html
+++ b/templates/transaccion_completa/refund-form.html
@@ -2,7 +2,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>
-      Ejemplo Transacci&oacute;n Completa - Transaccion Anulaci&oacute;n
+      Ejemplo Transacci&oacute;n Completa - Transacci&oacute;n Anulaci&oacute;n
     </title>
     {% include 'include/header.html' %}
   </head>
