--- a/templates/transaccion_completa/transaction_status.html
+++ b/templates/transaccion_completa/transaction_status.html
@@ -1,7 +1,9 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Ejemplo Transacci&oacute;n Completa - Status de Transaccion</title>
+    <title>
+      Ejemplo Transacci&oacute;n Completa - Status de Transacci&oacute;n
+    </title>
     {% include 'include/header.html' %}
   </head>
 
