--- a/templates/transaccion_completa_mall/deferred/transaction_committed.html
+++ b/templates/transaccion_completa_mall/deferred/transaction_committed.html
@@ -1,5 +1,6 @@
 <h1>
-  Ejemplo Transacci&oacute;n Completa Diferida Mall - Transacciòn confirmada
+  Ejemplo Transacci&oacute;n Completa Diferida Mall -
+  Transacci&oacute;nconfirmada
 </h1>
 
 <h2>Request</h2>
