--- a/templates/transaccion_completa_mall/transaction_committed.html
+++ b/templates/transaccion_completa_mall/transaction_committed.html
@@ -1,4 +1,4 @@
-<h1>Ejemplo Transacci&oacute;n Completa Mall Transacciòn confirmada</h1>
+<h1>Ejemplo Transacci&oacute;n Completa Mall Transacci&oacute;nconfirmada</h1>
 
 <h2>Request</h2>
 {{ req }}
