--- a/templates/webpay/plus/create.html
+++ b/templates/webpay/plus/create.html
@@ -1,36 +1,37 @@
 <html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplos Webpay Plus - Crear Transaccion</title>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Ejemplos Webpay Plus - Crear Transacci&oacute;n</title>
     {% include 'include/header.html' %}
-</head>
+  </head>
 
-<body class="container">
+  <body class="container">
     <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="#">Ejemplo Webpay Plus - Crear Transaccion</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Step: <strong>Create Transaction</strong></li>
-    </ol>
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="#">Ejemplo Webpay Plus - Crear Transacci&oacute;n</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">
+          Step: <strong>Create Transaction</strong>
+        </li>
+      </ol>
     </nav>
 
-
     <div class="alert alert-warning" role="alert">
-    <h3>request</h3>
-        {% for k, v in request.items() %}
-            {{ k }} = {{ v }},
-        {% endfor %}
-</div>
+      <h3>request</h3>
+      {% for k, v in request.items() %} {{ k }} = {{ v }}, {% endfor %}
+    </div>
     <div class="alert alert-primary" role="alert">
-    <h3>result</h3>
-    {{ response }}
-</div>
-<br>
-<form action="{{ response.url }}" method="POST">
-<input type="hidden" name="token_ws" value="{{ response.token }}">
-<input type="submit" value="Ejecutar Pago con Webpay">
-</form>
-<br>
+      <h3>result</h3>
+      {{ response }}
+    </div>
+    <br />
+    <form action="{{ response.url }}" method="POST">
+      <input type="hidden" name="token_ws" value="{{ response.token }}" />
+      <input type="submit" value="Ejecutar Pago con Webpay" />
+    </form>
+    <br />
 
-<a href="/">&laquo; volver a index</a>
-</body>
+    <a href="/">&laquo; volver a index</a>
+  </body>
 </html>
