style: add typo for text codigo

--- a/templates/oneclick/authorize.html
+++ b/templates/oneclick/authorize.html
@@ -41,7 +41,7 @@
       <hr />
       <div class="form-group">
         <label for="details_commerce_code_1"
-          >Codigo de comercio (comercio hijo)</label
+          >C&oacute;digo de comercio (comercio hijo)</label
         >
         <input
           class="form-control"
@@ -81,7 +81,7 @@
       <hr />
       <div class="form-group">
         <label for="details_commerce_code_2"
-          >Codigo de comercio (comercio hijo)</label
+          >C&oacute;digo de comercio (comercio hijo)</label
         >
         <input
           class="form-control"
