--- a/templates/oneclick/refund.html
+++ b/templates/oneclick/refund.html
@@ -44,7 +44,7 @@
 
       <div class="form-group">
         <label for="details_commerce_code_1"
-          >Codigo de comercio (comercio hijo)</label
+          >C&oacute;digo de comercio (comercio hijo)</label
         >
         <input
           id="details_commerce_code_1"
