--- a/templates/transaccion_completa_mall/create.html
+++ b/templates/transaccion_completa_mall/create.html
@@ -36,10 +36,10 @@
     <label for="details_commerce_code">Detalles de transacción 1</label>
     <select id="details_commerce_code" name="details[0][commerce_code]">
       <option selected="selected" value="{{ child_commerce_codes[0] }}">
-        Comercio 1 - Codigo {{ child_commerce_codes[0] }}
+        Comercio 1 - C&oacute;digo {{ child_commerce_codes[0] }}
       </option>
       <option value="{{ child_commerce_codes[1] }}">
-        Comercio 2 - Codigo {{ child_commerce_codes[1] }}
+        Comercio 2 - C&oacute;digo {{ child_commerce_codes[1] }}
       </option>
     </select>
 
@@ -58,10 +58,10 @@
     <label for="details_commerce_code">Detalles de transacción 2</label>
     <select id="details_commerce_code" name="details[1][commerce_code]">
       <option value="{{ child_commerce_codes[0] }}">
-        Comercio 1 - Codigo {{ child_commerce_codes[0] }}
+        Comercio 1 - C&oacute;digo {{ child_commerce_codes[0] }}
       </option>
       <option selected="selected" value="{{ child_commerce_codes[1] }}">
-        Comercio 2 - Codigo {{ child_commerce_codes[1] }}
+        Comercio 2 - C&oacute;digo {{ child_commerce_codes[1] }}
       </option>
     </select>
 
