--- a/templates/transaccion_completa_mall/deferred/create.html
+++ b/templates/transaccion_completa_mall/deferred/create.html
@@ -36,7 +36,7 @@
     <input id="card_expiration_date" name="card_expiration_date" value="{{
     (dt.utcnow() + timedelta(days=5 * 365)).strftime("%y/%m") }}"/>
     <br />
-    <label for="child_commerce_1"> Codigo de comercio 1 </label>
+    <label for="child_commerce_1"> C&oacute;digo de comercio 1 </label>
     <input
       id="child_commerce_1"
       name="child_commerce_1"
@@ -51,7 +51,7 @@
     <label for="amount_1"> Monto comercio 1 </label>
     <input id="amount_1" name="amount_1" value="2500" />
     <br />
-    <label for="child_commerce_2"> Codigo de comercio 2 </label>
+    <label for="child_commerce_2"> C&oacute;digo de comercio 2 </label>
     <input
       id="child_commerce_2"
       name="child_commerce_2"
