--- a/templates/transaccion_completa_mall/deferred/installments.html
+++ b/templates/transaccion_completa_mall/deferred/installments.html
@@ -19,7 +19,9 @@
   <h3>Comercio 1</h3>
   <hr />
 
-  <label for="etails_commerce_code_1">Codigo de comercio (comercio hijo)</label>
+  <label for="etails_commerce_code_1"
+    >C&oacute;digo de comercio (comercio hijo)</label
+  >
   <input
     id="details_commerce_code_1"
     name="details[0][commerce_code]"
@@ -57,7 +59,9 @@
   <h3>Comercio 2</h3>
   <hr />
 
-  <label for="etails_commerce_code_2">Codigo de comercio (comercio hijo)</label>
+  <label for="etails_commerce_code_2"
+    >C&oacute;digo de comercio (comercio hijo)</label
+  >
   <input
     id="details_commerce_code_2"
     name="details[1][commerce_code]"
