--- a/templates/transaccion_completa_mall/transaction_committed.html
+++ b/templates/transaccion_completa_mall/transaction_committed.html
@@ -27,13 +27,13 @@
   <label for="token">Token</label>
   <input name="token" id="token" value="{{ req.get('token') }}" />
 
-  <label for="child_commerce_code">Codigo de comercio (hijo)</label>
+  <label for="child_commerce_code">C&oacute;digo de comercio (hijo)</label>
   <input
     name="child_commerce_code"
     value="{{ resp.details[0]['commerce_code'] }}"
   />
 
-  <label for="child_buy_order">Codigo de comercio (hijo)</label>
+  <label for="child_buy_order">C&oacute;digo de comercio (hijo)</label>
   <input name="child_buy_order" value="{{ resp.details[0]['buy_order'] }}" />
 
   <label for="amount">Monto</label>
@@ -52,13 +52,13 @@
   <label for="token">Token</label>
   <input name="token" id="token" value="{{ req.get('token') }}" />
 
-  <label for="child_commerce_code">Codigo de comercio (hijo)</label>
+  <label for="child_commerce_code">C&oacute;digo de comercio (hijo)</label>
   <input
     name="child_commerce_code"
     value="{{ resp.details[1]['commerce_code'] }}"
   />
 
-  <label for="child_buy_order">Codigo de comercio (hijo)</label>
+  <label for="child_buy_order">C&oacute;digo de comercio (hijo)</label>
   <input name="child_buy_order" value="{{ resp.details[1]['buy_order'] }}" />
 
   <label for="amount">Monto</label>
