--- a/templates/webpay/plus_mall_deferred/create.html
+++ b/templates/webpay/plus_mall_deferred/create.html
@@ -92,7 +92,7 @@
             Comercio 1 - &oacute; {{ child_commerce_codes[0] }}
           </option>
           <option selected="selected" value="{{ child_commerce_codes[1] }}">
-            Comercio 2 - Codigo {{ child_commerce_codes[1] }}
+            Comercio 2 - C&oacute;digo {{ child_commerce_codes[1] }}
           </option>
         </select>
       </div>
