--- a/templates/oneclick/deferred/authorized.html
+++ b/templates/oneclick/deferred/authorized.html
@@ -48,7 +48,7 @@
 
       <div class="form-group">
         <label for="details_commerce_code_1"
-          >Codigo de comercio (comercio hijo)</label
+          >C&oacute;digo de comercio (comercio hijo)</label
         >
         <input
           id="details_commerce_code_1"
@@ -121,7 +121,7 @@
 
       <div class="form-group">
         <label for="details_commerce_code_1"
-          >Codigo de comercio (comercio hijo)</label
+          >C&oacute;digo de comercio (comercio hijo)</label
         >
         <input
           id="details_commerce_code_1"
